Better fix for the height of the Chart on mobile devices

--- a/winter_league/static/css/bootstrap.css
+++ b/winter_league/static/css/bootstrap.css
@@ -10092,5 +10092,11 @@ body {
     border-radius: .25rem !important;
 }
 
+.chart-container {
+  position: relative;
+  margin: auto;
+  height: 50vh;
+  width: 80vw;
+}
 
 /*# sourceMappingURL=bootstrap.css.map */
